--- a/Src/Zing.Mvc/Resources/Resource1.resx
+++ b/Src/Zing.Mvc/Resources/Resource1.resx
@@ -1,69 +1,68 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
+	<!-- 
+		Microsoft ResX Schema
 
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
+		Version 1.3
+
+		The primary goals of this format is to allow a simple XML format 
+		that is mostly human readable. The generation and parsing of the 
+		various data types are done through the TypeConverter classes 
+		associated with the data types.
+
+		Example:
+
+		... ado.net/XML headers & schema ...
+		<resheader name="resmimetype">text/microsoft-resx</resheader>
+		<resheader name="version">1.3</resheader>
+		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+		<data name="Name1">this is my long string</data>
+		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+			[base64 mime encoded serialized .NET Framework object]
+		</data>
+		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+			[base64 mime encoded string representing a byte array form of the .NET Framework object]
+		</data>
+
+		There are any number of "resheader" rows that contain simple 
+		name/value pairs.
+
+		Each data row contains a name, and value. The row also contains a 
+		type or mimetype. Type corresponds to a .NET class that support 
+		text/value conversion through the TypeConverter architecture. 
+		Classes that don't support this are serialized and stored with the 
+		mimetype set.
+
+		The mimetype is used for serialized objects, and tells the 
+		ResXResourceReader how to depersist the object. This is currently not 
+		extensible. For a given mimetype the value must be set accordingly:
+
+		Note - application/x-microsoft.net.object.binary.base64 is the format 
+		that the ResXResourceWriter will generate, however the reader can 
+		read any of the formats listed below.
+
+		mimetype: application/x-microsoft.net.object.binary.base64
+		value   : The object must be serialized with 
+			: System.Serialization.Formatters.Binary.BinaryFormatter
+			: and then encoded with base64 encoding.
+
+		mimetype: application/x-microsoft.net.object.soap.base64
+		value   : The object must be serialized with 
+			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+			: and then encoded with base64 encoding.
+
+		mimetype: application/x-microsoft.net.object.bytearray.base64
+		value   : The object must be serialized into a byte array 
+			: using a System.ComponentModel.TypeConverter
+			: and then encoded with base64 encoding.
+	-->
+	
+	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+		<xsd:element name="root" msdata:IsDataSet="true">
+			<xsd:complexType>
+			<xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
@@ -102,209 +101,209 @@
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="Grid_Create" xml:space="preserve">
-    <value>Добавить</value>
+			</xsd:complexType>
+		</xsd:element>
+	</xsd:schema>
+	<resheader name="resmimetype">
+		<value>text/microsoft-resx</value>
+	</resheader>
+	<resheader name="version">
+		<value>1.3</value>
+	</resheader>
+	<resheader name="reader">
+		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<resheader name="writer">
+		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+ <data name="Grid_Create" xml:space="preserve">
+    <value>插入</value>
   </data>
   <data name="Grid_Destroy" xml:space="preserve">
-    <value>Удалить</value>
+    <value>删除</value>
   </data>
   <data name="Grid_Cancel" xml:space="preserve">
-    <value>Отмена</value>
+    <value>取消</value>
   </data>
   <data name="Grid_Update" xml:space="preserve">
-    <value>Обновить</value>
+    <value>更新</value>
   </data>
   <data name="Grid_Edit" xml:space="preserve">
-    <value>Изменить</value>
+    <value>编辑</value>
   </data>
   <data name="Grid_Select" xml:space="preserve">
-    <value>Выбрать</value>
+    <value>选择</value>
   </data>
   <data name="Pager_Page" xml:space="preserve">
-    <value>Страница</value>
+    <value>页</value>
   </data>
   <data name="Pager_Display" xml:space="preserve">
-    <value>Отображены записи {0} - {1} из {2}</value>
+    <value>显示条目 {0} - {1} 共 {2}</value>
   </data>
   <data name="Pager_Of" xml:space="preserve">
-    <value>из {0}</value>
+    <value>共 {0}</value>
   </data>
   <data name="Filter_Filter" xml:space="preserve">
-    <value>фильтровать</value>
+    <value>过滤</value>
   </data>
   <data name="Filter_And" xml:space="preserve">
-    <value>И</value>
+    <value>并且</value>
   </data>
   <data name="Filter_Clear" xml:space="preserve">
-    <value>очистить фильтр</value>
+    <value>清除过滤</value>
   </data>
   <data name="Filter_DateIsEqualTo" xml:space="preserve">
-    <value>равна</value>
+    <value>等于</value>
   </data>
   <data name="Filter_DateIsGreaterThanOrEqualTo" xml:space="preserve">
-    <value>после или равна</value>
+    <value>大于或等于</value>
   </data>
   <data name="Filter_DateIsGreaterThan" xml:space="preserve">
-    <value>после</value>
+    <value>大于</value>
   </data>
   <data name="Filter_DateIsLessThanOrEqualTo" xml:space="preserve">
-    <value>до или равна</value>
+    <value>小于或等于</value>
   </data>
   <data name="Filter_DateIsLessThan" xml:space="preserve">
-    <value>до</value>
+    <value>小于</value>
   </data>
   <data name="Filter_DateIsNotEqualTo" xml:space="preserve">
-    <value>не равна</value>
+    <value>不等于</value>
   </data>
   <data name="Filter_NumberIsEqualTo" xml:space="preserve">
-    <value>равно</value>
+    <value>等于</value>
   </data>
   <data name="Filter_NumberIsGreaterThanOrEqualTo" xml:space="preserve">
-    <value>больше или равно</value>
+    <value>大于或等于</value>
   </data>
   <data name="Filter_NumberIsGreaterThan" xml:space="preserve">
-    <value>больше</value>
+    <value>大于</value>
   </data>
   <data name="Filter_NumberIsLessThanOrEqualTo" xml:space="preserve">
-    <value>меньше или равно</value>
+    <value>小于或等于</value>
   </data>
   <data name="Filter_NumberIsLessThan" xml:space="preserve">
-    <value>меньше</value>
+    <value>小于</value>
   </data>
   <data name="Filter_NumberIsNotEqualTo" xml:space="preserve">
-    <value>не равно</value>
+    <value>不等于</value>
   </data>
   <data name="Filter_Info" xml:space="preserve">
-    <value>Строки со значениями</value>
+    <value>显示符合以下条件的行</value>
   </data>
   <data name="Filter_StringEndsWith" xml:space="preserve">
-    <value>оканчивающимися на</value>
+    <value>结束于</value>
   </data>
   <data name="Filter_StringIsEqualTo" xml:space="preserve">
-    <value>равными</value>
+    <value>等于</value>
   </data>
   <data name="Filter_StringIsNotEqualTo" xml:space="preserve">
-    <value>не равными</value>
+    <value>不等于</value>
   </data>
   <data name="Filter_StringStartsWith" xml:space="preserve">
-    <value>начинающимися на</value>
+    <value>开始于</value>
   </data>
   <data name="Filter_StringContains" xml:space="preserve">
-    <value>содержащими</value>
+    <value>包含</value>
   </data>
   <data name="Group_Empty" xml:space="preserve">
-    <value>Переместите сюда заголовок колонки, чтобы сгрупировать записи из этой колонки</value>
+    <value>托拽列标题到此处按列组合显示</value>
   </data>
   <data name="Filter_EnumIsEqualTo" xml:space="preserve">
-    <value>равно</value>
+    <value>等于</value>
   </data>
   <data name="Filter_EnumIsNotEqualTo" xml:space="preserve">
-    <value>не равно</value>
+    <value>不等于</value>
   </data>
   <data name="Grid_Confirmation" xml:space="preserve">
-    <value>Вы уверены, что хотите удалить эту запись?</value>
+    <value>确定要删除吗？</value>
   </data>
   <data name="Filter_SelectValue" xml:space="preserve">
-    <value>-выберите-</value>
+    <value>-选择值-</value>
   </data>
   <data name="Filter_IsFalse" xml:space="preserve">
-    <value>ложь</value>
+    <value>为假</value>
   </data>
   <data name="Filter_IsTrue" xml:space="preserve">
-    <value>истина</value>
+    <value>为真</value>
   </data>
   <data name="Pager_Empty" xml:space="preserve">
-    <value>Нет записей для отображения</value>
+    <value>没有可显示的记录。</value>
   </data>
   <data name="Grid_CancelChanges" xml:space="preserve">
-    <value>Отменить изменения</value>
+    <value>取消修改</value>
   </data>
   <data name="Grid_SaveChanges" xml:space="preserve">
-    <value>Сохранить изменения</value>
+    <value>保存修改</value>
   </data>
   <data name="Pager_Refresh" xml:space="preserve">
-    <value>Обновить</value>
+    <value>刷新</value>
   </data>
   <data name="Filter_StringDoesNotContain" xml:space="preserve">
-    <value>Does not contain</value>
+    <value>不包含</value>
   </data>
   <data name="Filter_Or" xml:space="preserve">
-    <value>Or</value>
+    <value>或者</value>
   </data>
   <data name="Editor_Bold" xml:space="preserve">
-    <value>Полужирный</value>
+    <value>粗体</value>
   </data>
   <data name="Editor_CreateLink" xml:space="preserve">
-    <value>Вставить гиперссылку</value>
+    <value>插入链接</value>
   </data>
   <data name="Editor_FontName" xml:space="preserve">
-    <value>Выбрать шрифт</value>
+    <value>选择字体</value>
   </data>
   <data name="Editor_FontNameInherit" xml:space="preserve">
-    <value>(inherited font)</value>
+    <value>（继承的字体）</value>
   </data>
   <data name="Editor_FontSize" xml:space="preserve">
-    <value>Выбрать размер шрифта</value>
+    <value>选择字号</value>
   </data>
   <data name="Editor_FontSizeInherit" xml:space="preserve">
-    <value>(inherited size)</value>
+    <value>（继承的字号）</value>
   </data>
   <data name="Editor_FormatBlock" xml:space="preserve">
-    <value>Форматирование</value>
+    <value>选择块类型</value>
   </data>
   <data name="Editor_Indent" xml:space="preserve">
-    <value>Увеличить отступ</value>
+    <value>增加缩进</value>
   </data>
   <data name="Editor_InsertHtml" xml:space="preserve">
-    <value>Вставить HTML</value>
+    <value>插入 HTML</value>
   </data>
   <data name="Editor_InsertImage" xml:space="preserve">
-    <value>Вставить изображение</value>
+    <value>插入图片</value>
   </data>
   <data name="Editor_InsertOrderedList" xml:space="preserve">
-    <value>Вставить нумерованный список</value>
+    <value>插入有序列表</value>
   </data>
   <data name="Editor_InsertUnorderedList" xml:space="preserve">
-    <value>Вставить маркированныйсписок</value>
+    <value>插入无序列表</value>
   </data>
   <data name="Editor_Italic" xml:space="preserve">
-    <value>Курсив</value>
+    <value>斜体</value>
   </data>
   <data name="Editor_JustifyCenter" xml:space="preserve">
-    <value>Выровнять по центру</value>
+    <value>居中</value>
   </data>
   <data name="Editor_JustifyFull" xml:space="preserve">
-    <value>Выровнять по ширине</value>
+    <value>两端对齐</value>
   </data>
   <data name="Editor_JustifyLeft" xml:space="preserve">
-    <value>Выровнять по левому краю</value>
+    <value>左对齐</value>
   </data>
   <data name="Editor_JustifyRight" xml:space="preserve">
-    <value>Выровнять по правому краю</value>
+    <value>右对齐</value>
   </data>
   <data name="Editor_Outdent" xml:space="preserve">
-    <value>Уменьшить отступ</value>
+    <value>减少缩进</value>
   </data>
   <data name="Editor_Strikethrough" xml:space="preserve">
-    <value>Зачеркнутый</value>
+    <value>删除线</value>
   </data>
   <data name="Editor_Styles" xml:space="preserve">
-    <value>Стиль</value>
+    <value>风格</value>
   </data>
   <data name="Editor_Subscript" xml:space="preserve">
     <value>Subscript</value>
@@ -313,61 +312,61 @@
     <value>Superscript</value>
   </data>
   <data name="Editor_Underline" xml:space="preserve">
-    <value>Подчеркнутый</value>
+    <value>下划线</value>
   </data>
   <data name="Editor_Unlink" xml:space="preserve">
-    <value>Удалить гиперссылку</value>
+    <value>移除链接</value>
   </data>
   <data name="Pager_First" xml:space="preserve">
-    <value>Вернуться на первую страницу</value>
+    <value>首页</value>
   </data>
   <data name="Pager_ItemsPerPage" xml:space="preserve">
-    <value>элементов на странице</value>
+    <value>items per page</value>
   </data>
   <data name="Pager_Last" xml:space="preserve">
-    <value>К последней странице</value>
+    <value>末页</value>
   </data>
   <data name="Pager_Next" xml:space="preserve">
-    <value>Перейдите на следующую страницу</value>
+    <value>后页</value>
   </data>
   <data name="Pager_Previous" xml:space="preserve">
-    <value>Перейти на предыдущую страницу</value>
+    <value>前页</value>
   </data>
   <data name="Upload_Cancel" xml:space="preserve">
-    <value>Отмена</value>
+    <value>取消</value>
   </data>
   <data name="Upload_DropFilesHere" xml:space="preserve">
-    <value>перетащите сюда файлы для загрузки</value>
+    <value>拖拽要上传文件到此处</value>
   </data>
   <data name="Upload_Remove" xml:space="preserve">
-    <value>Удалить</value>
+    <value>移除</value>
   </data>
   <data name="Upload_Retry" xml:space="preserve">
-    <value>Повторить</value>
+    <value>重试</value>
   </data>
   <data name="Upload_Select" xml:space="preserve">
-    <value>Выбрать...</value>
+    <value>选择...</value>
   </data>
   <data name="Upload_StatusFailed" xml:space="preserve">
-    <value>неудачно</value>
+    <value>失败</value>
   </data>
   <data name="Upload_StatusUploaded" xml:space="preserve">
-    <value>загружено</value>
+    <value>已上传</value>
   </data>
   <data name="Upload_StatusUploading" xml:space="preserve">
-    <value>загружается</value>
+    <value>上传中</value>
   </data>
   <data name="Upload_UploadSelectedFiles" xml:space="preserve">
-    <value>Загрузить файлы</value>
+    <value>上传文件</value>
   </data>
   <data name="Grid_Columns" xml:space="preserve">
-    <value>Колонны</value>
+    <value>列</value>
   </data>
   <data name="Grid_SortAscending" xml:space="preserve">
-    <value>Сортировка по возрастанию</value>
+    <value>升序排序</value>
   </data>
   <data name="Grid_SortDescending" xml:space="preserve">
-    <value>Сортировка по убыванию</value>
+    <value>降序排序</value>
   </data>
   <data name="Editor_DialogButtonSeparator" xml:space="preserve">
     <value>or</value>
